[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/InteractiveConsole.gd" type="Script" id=1]
[ext_resource path="res://ui/Console.tres" type="Theme" id=2]
[ext_resource path="res://fonts/LiberationMono-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/LiberationSerif-BoldItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/LiberationSerif-Italic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/LiberationSerif-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://fonts/LiberationSerif-Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 17
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 17
font_data = ExtResource( 6 )

[node name="Node2D" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Console" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="RichTextLabel" parent="Console"]
margin_right = 1024.0
margin_bottom = 569.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[b]user@localhost>[/b]"
text = "user@localhost>"
scroll_following = true
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="Console"]
margin_top = 573.0
margin_right = 1024.0
margin_bottom = 600.0
theme = ExtResource( 2 )
caret_blink_speed = 0.5

[node name="Tooltip" type="Panel" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Tooltip"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/bold_italics_font = SubResource( 2 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[b]user@localhost>[/b]"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="meta_clicked" from="Console/Output" to="." method="_on_Output_meta_clicked"]
[connection signal="meta_hover_ended" from="Console/Output" to="." method="_on_Output_meta_hover_ended"]
[connection signal="meta_hover_started" from="Console/Output" to="." method="_on_Output_meta_hover_started"]
[connection signal="text_entered" from="Console/Input" to="." method="_on_Input_text_entered"]
[connection signal="meta_clicked" from="Tooltip/Text" to="." method="_on_Output_meta_clicked"]
[connection signal="meta_hover_ended" from="Tooltip/Text" to="." method="_on_Output_meta_hover_ended"]
[connection signal="meta_hover_started" from="Tooltip/Text" to="." method="_on_Output_meta_hover_started"]
